<resources>
    <string name="app_name">Self_Introduction</string>
    <string name="signIn_id">아이디</string>
    <string name="signIn_id_hint">아이디를 입력하세요.</string>
    <string name="signIn_pw">비밀번호</string>
    <string name="signIn_pw_hint">비밀번호를 입력하세요.</string>
    <string name="signIn_signIn">로그인</string>
    <string name="signUp_name">이름</string>
    <string name="signUp_name_hint">이름을 입력하세요.</string>
    <string name="signUp_id">아이디</string>
    <string name="signUp_id_hint">아이디를 입력하세요.</string>
    <string name="signUp_pw">비밀번호</string>
    <string name="signUp_pw_hint">비밀번호를 입력하세요.</string>
    <string name="signUp_signUp">회원가입</string>
    <string name="signIn_signUp">회원가입</string>
    <string name="profile_id">아이디 :</string>
    <string name="profile_idSample">내꺼다 임마</string>
    <string name="profile_name">이름 :</string>
    <string name="profile_age">나이 :</string>
    <string name="profile_MBTI">MBTI :</string>
    <string name="profile_finish">종료</string>
    <string name="toast_msg_signInError">아이디/비밀번호를 확인해주세요</string>
    <string name="toast_msg_signInSuccess">로그인 성공</string>
    <string name="age">34</string>
    <string name="developerName">추정호</string>
    <string name="developerMBTI">ISTJ</string>
</resources>